<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".running.EditRunningRecordFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRecord"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="0dp"
            tools:text="24:15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/date"
        app:layout_constraintTop_toBottomOf="@id/textInputRecord">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="0dp"
            tools:text="5th January 2023" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        app:layout_constraintTop_toBottomOf="@id/textInputDate"
        android:layout_marginTop="48dp"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/buttonSave"
        android:layout_marginTop="12dp"
        android:text="@string/clear_record"
        android:id="@+id/buttonDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>